--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -23,23 +23,23 @@
         <h6>Projects:</h6>
         <ul class="list-group">
             <li class="list-group-item">
-                <img class="bs-project-icon" src="/images/php.png" /><strong>This Site</strong>
+                <img class="bs-project-icon" src="public/images/php.png" /><strong>This Site</strong>
                 <p>The first project will be this site itself. I will be building it using PHP because it is the most cost effective way to host a personal website, and I won't need the capabilities of a large .NET or NodeJS application. The website will have projects which will be divided into sections. Each section will have a short description, a longer discussion of challenges and things learned, and associated screenshots and code snippets.</p>
             </li>
             <li class="list-group-item">
-                <img class="bs-project-icon" src="/images/cPlusPlus.png" /><strong>A Turn Based Battle Game Engine</strong>
+                <img class="bs-project-icon" src="public/images/cPlusPlus.png" /><strong>A Turn Based Battle Game Engine</strong>
                 <p>I've long been a fan of JRPG games, and I think this would be wonderful project to learn a little more about graphics rendering. I would do this project in C++ and my goal would be to directly use OpenGL or DirectX (Maybe Vulcan?) to render a simple 2D game engine</p>
             </li>
             <li class="list-group-item">
-                <img class="bs-project-icon" src="/images/cSharp.png" /><strong>A Repair Business Application</strong>
+                <img class="bs-project-icon" src="public/images/cSharp.png" /><strong>A Repair Business Application</strong>
                 <p>I spent many years working at a business that did repair of electronic barcode devices, and we never could find a piece of software that worked perfectly well with out workflow. I would like to build a database backed program using WPF to service this role.</p>
             </li>
             <li class="list-group-item">
-                <img class="bs-project-icon" src="/images/javascript.png" /><strong>A random spin the wheel program</strong>
+                <img class="bs-project-icon" src="public/images/javascript.png" /><strong>A random spin the wheel program</strong>
                 <p>This is actually a program I have partially implemented. I made it for my friend's charity video game screen to select a random race and class in World of Warcraft for us to play for 24 hours. It worked ok, but I would like to refine it an offer an API so that anyone could add a fun Wheel of Fortune style spinner to their website as an easy plugin</p>
             </li>
             <li class="list-group-item">
-                <img class="bs-project-icon" src="/images/python.png" /><strong>A really fun text-based adventure in Python</strong>
+                <img class="bs-project-icon" src="public/images/python.png" /><strong>A really fun text-based adventure in Python</strong>
                 <p>Python seems like a really cool language, I haven't had as much chance to play with it as I would like. I think a text-based adventure game would give me a great chance to play with the object oriented features of the language. In my experience, Python is also great at dealing with strings, so it seems like a natural fit for this kind of program.</p>
             </li>
         </ul>
