--- a/app/templates/admin/index.html.twig
+++ b/app/templates/admin/index.html.twig
@@ -7,5 +7,8 @@
 <div class="shadowed col-sm-12 col-md-10 offset-md-1 bs-jumbo p-5">
 <h5>Admin Section</h5>
 
+<p><a href="admin/projects">View Projects</a></p>
+<p><a href="admin/projects/create">Create Project</a></p>
+
 </div>
 {% endblock %}
