--- a/app/templates/admin/projects.html.twig
+++ b/app/templates/admin/projects.html.twig
@@ -8,8 +8,8 @@
 <ul class="list-group">
 
     {% for project in projects %}
-        <li class="list-group-item" >
-        <h3>{{ project.Name }}</h2>
+        <li onclick="location.href='/admin/projects/{{project.id}}';" class="clickable list-group-item" >
+        <h3>{{ project.Name }}</h3>
         <p>{{ project.Description | raw }}</p>
         
         </li>
