--- a/public/css/bs.css
+++ b/public/css/bs.css
@@ -40,6 +40,14 @@ body {
     border-radius:10px;
 }
 
+.clickable{
+    cursor:pointer;
+}
+
+.clickable:hover{
+    background:#eeeeee
+
+}
     .shadowed {
         box-shadow: 0 3px 8px 0 rgba(0,0,0,.4), 0 0 0 1px rgba(0,0,0,0.04);
     }
