--- a/app/templates/admin/viewModule.html.twig
+++ b/app/templates/admin/viewModule.html.twig
@@ -5,12 +5,14 @@
 {% block body %}
 
 <div class="shadowed col-sm-12 col-md-10 offset-md-1 bs-jumbo p-5">
-    <a href="/admin/projects/{{module.project}}/module/{{module.id}}/edit" class="btn bs-btn">Edit Module</a>
-    <a href="/admin/projects/{{module.project}}/module/{{module.id}}/delete" class="btn bs-btn">Delete Module</a>
+    <a href="/admin/projects/{{module.project}}/modules/{{module.slug}}/edit" class="btn bs-button">Edit Module</a>
+    <a href="/admin/projects/{{module.project}}/modules/{{module.slug}}/delete" class="btn bs-button">Delete Module</a>
+    <a href="/admin/projects/{{module.project}}/modules/{{module.slug}}" class="btn bs-button">Cancel</a>
+
 
     <h3>{{module.name}}</h3>
     <p>{{module.summary | raw}}</p>
-    <p>{{module.discussion}}</p>
+    <p>{{module.discussion | raw}}</p>
 
 
 </div>
