--- a/app/templates/admin/projects.html.twig
+++ b/app/templates/admin/projects.html.twig
@@ -5,16 +5,19 @@
 {% block body %}
 
 <div class="shadowed col-sm-12 col-md-10 offset-md-1 bs-jumbo p-5">
-<ul class="list-group">
+    <a href="projects/create" class="btn bs-button">Create New Project</a>
+    <div class="my-3">
+        <ul class="list-group">
 
-    {% for project in projects %}
-        <li onclick="location.href='/admin/projects/{{project.slug}}';" class="clickable list-group-item" >
-        <h3>{{ project.Name }}</h3>
-        <p>{{ project.Description | raw }}</p>
-        
-        </li>
+            {% for project in projects %}
+                <li onclick="location.href='/admin/projects/{{project.slug}}';" class="clickable list-group-item" >
+                <h3>{{ project.Name }}</h3>
+                <p>{{ project.Description | raw }}</p>
+                
+                </li>
 
-    {% endfor %}
-</ul>
+            {% endfor %}
+        </ul>
+    </div>
 </div>
 {% endblock %}
