--- a/app/templates/admin/viewProject.html.twig
+++ b/app/templates/admin/viewProject.html.twig
@@ -6,7 +6,9 @@
 
 <div class="shadowed col-sm-12 col-md-10 offset-md-1 bs-jumbo p-5">
         {% if project %}
-        <a href="/admin/projects/{{project.slug}}/modules/add" class="btn bs-btn">Add Module</a>
+        <a class="btn bs-button" href="/admin/projects/{{project.slug}}/modules/add" class="btn bs-btn">Add Module</a>
+                <a class="btn bs-button" href="/admin/projects" class="btn bs-btn">Back</a>
+
         <h3>{{project.name}}</h3>
         <p>{{project.description | raw}}</p>
 
